--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "nextjs",
-  "version": "1.0.0",
-  "description": "Next JS POC",
-  "main": "index.js",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev":"next",
-    "build":"next build",
-    "start":"next start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rammurat/nextjs.git"
-  },
-  "author": "Ram Murat SHarma",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rammurat/nextjs/issues"
-  },
-  "homepage": "https://github.com/rammurat/nextjs#readme",
   "dependencies": {
-    "next": "^9.0.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "next": "10.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
