--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "isomorphic-unfetch": "^3.1.0",
     "mongodb": "^3.6.3",
