--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "argon2": "^0.27.0",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "isomorphic-unfetch": "^3.1.0",
     "mongodb": "^3.6.3",
     "next": "^10.0.0",
+    "next-auth": "^3.1.0",
     "next-connect": "^0.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "redaxios": "^0.3.0",
     "sass": "^1.27.0"
   }
 }
